[package]
name = "libllm"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
dotenvy = "0.15.7"

[dependencies]
openai = "1.0.0-alpha.14"
tokio = { version = "1.26.0", features = ["full"] }
stacks-common = { path = "../stacks-common" }
hex = "0.4.2"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rusqlite]
version = "=0.24.2"
features = ["blob", "serde_json", "i128_blob", "bundled", "trace"]
